[gd_scene load_steps=52 format=2]

[ext_resource path="res://Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://graphics/heart_indicator.svg" type="Texture" id=2]
[ext_resource path="res://Heartbeat.gd" type="Script" id=3]
[ext_resource path="res://graphics/incredibly_boring_shrub.svg" type="Texture" id=4]
[ext_resource path="res://lmms/music_1.ogg" type="AudioStream" id=5]
[ext_resource path="res://WrapTilemap.gd" type="Script" id=6]
[ext_resource path="res://graphics/plain_dirt.svg" type="Texture" id=7]
[ext_resource path="res://graphics/forest_leaves.png" type="Texture" id=8]
[ext_resource path="res://graphics/fog_mayhaps.svg" type="Texture" id=9]
[ext_resource path="res://graphics/ground.png" type="Texture" id=10]
[ext_resource path="res://graphics/leaf.svg" type="Texture" id=11]
[ext_resource path="res://graphics/leaf2.svg" type="Texture" id=12]
[ext_resource path="res://graphics/JoystickIndicator.svg" type="Texture" id=13]
[ext_resource path="res://graphics/heart_indicator_shock.svg" type="Texture" id=14]
[ext_resource path="res://graphics/healthbar.svg" type="Texture" id=15]
[ext_resource path="res://graphics/healthbar_spikes.svg" type="Texture" id=16]
[ext_resource path="res://graphics/healthbar_spikes_2.svg" type="Texture" id=17]
[ext_resource path="res://Spawner.gd" type="Script" id=18]
[ext_resource path="res://graphics/healthbar_health.svg" type="Texture" id=19]
[ext_resource path="res://graphics/button_right.svg" type="Texture" id=20]
[ext_resource path="res://graphics/button_dow.svg" type="Texture" id=21]
[ext_resource path="res://Tutorial.gd" type="Script" id=22]
[ext_resource path="res://ScreenTransition.tscn" type="PackedScene" id=23]
[ext_resource path="res://LagHelper.gd" type="Script" id=24]
[ext_resource path="res://BookExplode.tscn" type="PackedScene" id=25]
[ext_resource path="res://CrystalExplode.tscn" type="PackedScene" id=26]
[ext_resource path="res://CauldronEnemy.tscn" type="PackedScene" id=27]
[ext_resource path="res://ScrollEnemyII.tscn" type="PackedScene" id=28]
[ext_resource path="res://WritingBullet2.tscn" type="PackedScene" id=30]
[ext_resource path="res://BookEnemy.tscn" type="PackedScene" id=31]
[ext_resource path="res://WritingBullet.tscn" type="PackedScene" id=32]
[ext_resource path="res://CrystalEnemy.tscn" type="PackedScene" id=33]
[ext_resource path="res://CrystalBullet.tscn" type="PackedScene" id=34]
[ext_resource path="res://ScrollEnemy.tscn" type="PackedScene" id=35]
[ext_resource path="res://ScrollExplode.tscn" type="PackedScene" id=36]
[ext_resource path="res://CauldronExplode.tscn" type="PackedScene" id=37]
[ext_resource path="res://BroomExplode.tscn" type="PackedScene" id=38]
[ext_resource path="res://BroomEnemy.tscn" type="PackedScene" id=39]
[ext_resource path="res://BroomBullet.tscn" type="PackedScene" id=40]
[ext_resource path="res://BasicArrowII.tscn" type="PackedScene" id=42]
[ext_resource path="res://BasicArrowIII.tscn" type="PackedScene" id=43]
[ext_resource path="res://BasicArrow.tscn" type="PackedScene" id=44]

[sub_resource type="Animation" id=1]
resource_name = "Beat"
length = 0.8
loop = true
step = 0.02
tracks/0/type = "method"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "beat"
}, {
"args": [  ],
"method": "beat"
} ]
}

[sub_resource type="Animation" id=2]
resource_name = "Hide"
tracks/0/type = "value"
tracks/0/path = NodePath("Shock:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=3]
resource_name = "Shock"
length = 0.15
step = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Shock:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Shock:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.15 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1.5, 1.5 ), Vector2( 1, 1 ) ]
}

[sub_resource type="DynamicFontData" id=7]
font_path = "res://font/ptwht/playtime.ttf"

[sub_resource type="DynamicFont" id=8]
size = 48
use_filter = true
font_data = SubResource( 7 )

[sub_resource type="Animation" id=9]
resource_name = "Default"
tracks/0/type = "value"
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=10]
resource_name = "Level1"
length = 6.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 4, 5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="TileSet" id=4]
0/name = "incredibly_boring_shrub.svg 0"
0/texture = ExtResource( 4 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 64, 64 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0
1/name = "plain_dirt.svg 1"
1/texture = ExtResource( 7 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 0, 0, 64, 64 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0

[sub_resource type="ParticlesMaterial" id=5]
emission_shape = 2
emission_box_extents = Vector3( 384, 12, 1 )
flag_disable_z = true
direction = Vector3( 0, 1, 0 )
spread = 0.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = -300.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
angle = 720.0
angle_random = 1.0
scale = 0.5
scale_random = 1.0

[node name="Root" type="Node2D"]

[node name="Layer" type="CanvasLayer" parent="."]

[node name="Heartbeat" type="Sprite" parent="Layer"]
position = Vector2( 96, 64 )
texture = ExtResource( 2 )
script = ExtResource( 3 )

[node name="Beater" type="AnimationPlayer" parent="Layer/Heartbeat"]
autoplay = "Beat"
anims/Beat = SubResource( 1 )

[node name="Audio" type="AudioStreamPlayer" parent="Layer/Heartbeat"]
stream = ExtResource( 5 )
bus = "GameMusic"

[node name="Shock" type="Sprite" parent="Layer/Heartbeat"]
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 14 )

[node name="ShockAnim" type="AnimationPlayer" parent="Layer/Heartbeat"]
autoplay = "Hide"
anims/Hide = SubResource( 2 )
anims/Shock = SubResource( 3 )

[node name="fog_mayhaps" type="Sprite" parent="Layer"]
visible = false
position = Vector2( 385.043, 928 )
texture = ExtResource( 9 )

[node name="healthbar" type="Sprite" parent="Layer"]
position = Vector2( 192, 64 )
z_index = -5
texture = ExtResource( 15 )

[node name="HealthbarHealth" type="Sprite" parent="Layer"]
position = Vector2( 103.127, 38.823 )
z_index = -5
texture = ExtResource( 19 )
centered = false
region_enabled = true
region_rect = Rect2( 0, 0, 256, 64 )

[node name="Spikes" type="Sprite" parent="Layer"]
position = Vector2( 68.9684, 78.5562 )
scale = Vector2( 1, 1e-05 )
texture = ExtResource( 16 )
centered = false

[node name="Spikes2" type="Sprite" parent="Layer"]
position = Vector2( 65.5268, 55.6855 )
scale = Vector2( 1, 1e-05 )
z_index = -5
texture = ExtResource( 17 )
centered = false
offset = Vector2( 0, -64 )

[node name="Intro" type="Label" parent="Layer"]
visible = false
modulate = Color( 1, 1, 1, 0 )
margin_left = 4.58691
margin_top = 578.91
margin_right = 771.587
margin_bottom = 953.91
custom_fonts/font = SubResource( 8 )
text = "Oh no! The forest trail to
your house has been overrun
with EVIL enchanted objects...

It seems you must fight your
way home!"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="Layer/Intro"]
autoplay = "Default"
anims/Default = SubResource( 9 )
anims/Level1 = SubResource( 10 )

[node name="Tutorial" type="CanvasLayer" parent="."]
script = ExtResource( 22 )

[node name="Label1" type="Label" parent="Tutorial"]
visible = false
margin_left = 1.0
margin_top = 872.0
margin_right = 768.0
margin_bottom = 950.0
custom_fonts/font = SubResource( 8 )
text = "Use WASD or   L   to move"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="JoystickIndicator" type="Sprite" parent="Tutorial/Label1"]
position = Vector2( 441.85, 29.21 )
scale = Vector2( 0.268771, 0.268771 )
texture = ExtResource( 13 )

[node name="Label2" type="Label" parent="Tutorial"]
visible = false
margin_top = 809.921
margin_right = 767.0
margin_bottom = 1049.92
custom_fonts/font = SubResource( 8 )
text = "Press Space or        to jump
over pits and enemy bullets"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonInd" type="Sprite" parent="Tutorial/Label2"]
position = Vector2( 455.582, 31.5182 )
scale = Vector2( 0.268771, 0.268771 )
texture = ExtResource( 20 )

[node name="Label3" type="Label" parent="Tutorial"]
visible = false
margin_left = 1.043
margin_top = 866.807
margin_right = 768.043
margin_bottom = 1106.81
custom_fonts/font = SubResource( 8 )
text = "Hold Z or        to shoot"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonInd" type="Sprite" parent="Tutorial/Label3"]
position = Vector2( 398.255, 29.6279 )
scale = Vector2( 0.268771, 0.268771 )
texture = ExtResource( 21 )

[node name="Label4" type="Label" parent="Tutorial"]
visible = false
margin_left = 134.595
margin_top = 32.7395
margin_right = 901.595
margin_bottom = 272.74
custom_fonts/font = SubResource( 8 )
text = "This is your health"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label5" type="Label" parent="Tutorial"]
visible = false
margin_left = -147.859
margin_top = 113.374
margin_right = 619.141
margin_bottom = 353.374
custom_fonts/font = SubResource( 8 )
text = "This is your heart"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label6" type="Label" parent="Tutorial"]
visible = false
margin_left = -61.7945
margin_top = 109.725
margin_right = 705.206
margin_bottom = 349.725
custom_fonts/font = SubResource( 8 )
text = "Press Z or        at the same
time as your heart beats
for powerful shots"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonInd2" type="Sprite" parent="Tutorial/Label6"]
position = Vector2( 374.663, 26.2417 )
scale = Vector2( 0.268771, 0.268771 )
texture = ExtResource( 21 )

[node name="Label7" type="Label" parent="Tutorial"]
visible = false
margin_left = -91.5756
margin_top = 116.432
margin_right = 675.424
margin_bottom = 356.432
custom_fonts/font = SubResource( 8 )
text = "Consecutive shots are
more powerful
"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label8" type="Label" parent="Tutorial"]
visible = false
margin_left = 0.201508
margin_top = 765.518
margin_right = 767.202
margin_bottom = 1005.52
custom_fonts/font = SubResource( 8 )
text = "Beat all the enemies to win!

Good luck!"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Camera" type="Camera2D" parent="."]
anchor_mode = 0
current = true

[node name="TileMap" type="TileMap" parent="."]
z_index = -500
tile_set = SubResource( 4 )
format = 1
tile_data = PoolIntArray( 0, 1, 0, 1, 1, 0, 2, 1, 0, 3, 1, 0, 4, 1, 0, 5, 1, 0, 6, 1, 0, 7, 1, 0, 8, 1, 0, 9, 1, 0, 10, 1, 0, 11, 1, 0, 65536, 1, 0, 65537, 1, 0, 65538, 1, 0, 65539, 1, 0, 65540, 1, 0, 65541, 1, 0, 65542, 1, 0, 65543, 1, 0, 65544, 1, 0, 65545, 1, 0, 65546, 1, 0, 65547, 1, 0, 131072, 1, 0, 131073, 1, 0, 131074, 1, 0, 131075, 1, 0, 131076, 1, 0, 131077, 1, 0, 131078, 1, 0, 131079, 1, 0, 131080, 1, 0, 131081, 1, 0, 131082, 1, 0, 131083, 1, 0, 196608, 1, 0, 196609, 1, 0, 196610, 1, 0, 196611, 1, 0, 196612, 1, 0, 196613, 1, 0, 196614, 1, 0, 196615, 1, 0, 196616, 1, 0, 196617, 1, 0, 196618, 1, 0, 196619, 1, 0, 262144, 1, 0, 262145, 1, 0, 262146, 1, 0, 262147, 1, 0, 262148, 1, 0, 262149, 1, 0, 262150, 1, 0, 262151, 1, 0, 262152, 1, 0, 262153, 1, 0, 262154, 1, 0, 262155, 1, 0, 327680, 1, 0, 327681, 1, 0, 327682, 1, 0, 327683, 1, 0, 327684, 1, 0, 327685, 1, 0, 327686, 1, 0, 327687, 1, 0, 327688, 1, 0, 327689, 1, 0, 327690, 1, 0, 327691, 1, 0, 393216, 1, 0, 393217, 1, 0, 393218, 1, 0, 393219, 1, 0, 393220, 1, 0, 393221, 1, 0, 393222, 1, 0, 393223, 1, 0, 393224, 1, 0, 393225, 1, 0, 393226, 1, 0, 393227, 1, 0, 458752, 1, 0, 458753, 1, 0, 458754, 1, 0, 458755, 1, 0, 458756, 1, 0, 458757, 1, 0, 458758, 1, 0, 458759, 1, 0, 458760, 1, 0, 458761, 1, 0, 458762, 1, 0, 458763, 1, 0, 524288, 1, 0, 524289, 1, 0, 524290, 1, 0, 524291, 1, 0, 524292, 1, 0, 524293, 1, 0, 524294, 1, 0, 524295, 1, 0, 524296, 1, 0, 524297, 1, 0, 524298, 1, 0, 524299, 1, 0, 589824, 1, 0, 589825, 1, 0, 589826, 1, 0, 589827, 1, 0, 589828, 1, 0, 589829, 1, 0, 589830, 1, 0, 589831, 1, 0, 589832, 1, 0, 589833, 1, 0, 589834, 1, 0, 589835, 1, 0, 655360, 1, 0, 655361, 1, 0, 655362, 1, 0, 655363, 1, 0, 655364, 1, 0, 655365, 1, 0, 655366, 1, 0, 655367, 1, 0, 655368, 1, 0, 655369, 1, 0, 655370, 1, 0, 655371, 1, 0, 720896, 1, 0, 720897, 1, 0, 720898, 1, 0, 720899, 1, 0, 720900, 1, 0, 720901, 1, 0, 720902, 1, 0, 720903, 1, 0, 720904, 1, 0, 720905, 1, 0, 720906, 1, 0, 720907, 1, 0, 786432, 1, 0, 786433, 1, 0, 786434, 1, 0, 786435, 1, 0, 786436, 1, 0, 786437, 1, 0, 786438, 1, 0, 786439, 1, 0, 786440, 1, 0, 786441, 1, 0, 786442, 1, 0, 786443, 1, 0, 851968, 1, 0, 851969, 1, 0, 851970, 1, 0, 851971, 1, 0, 851972, 1, 0, 851973, 1, 0, 851974, 1, 0, 851975, 1, 0, 851976, 1, 0, 851977, 1, 0, 851978, 1, 0, 851979, 1, 0, 917504, 1, 0, 917505, 1, 0, 917506, 0, 0, 917507, 1, 0, 917508, 1, 0, 917509, 1, 0, 917510, 1, 0, 917511, 1, 0, 917512, 1, 0, 917513, 1, 0, 917514, 1, 0, 917515, 1, 0, 983040, 1, 0, 983041, 1, 0, 983042, 1, 0, 983043, 1, 0, 983044, 1, 0, 983045, 1, 0, 983046, 1, 0, 983047, 1, 0, 983048, 1, 0, 983049, 1, 0, 983050, 1, 0, 983051, 1, 0, 1048576, 1, 0, 1048577, 1, 0, 1048578, 1, 0, 1048579, 1, 0, 1048580, 1, 0, 1048581, 1, 0, 1048582, 1, 0, 1048583, 1, 0, 1048584, 1, 0, 1048585, 1, 0, 1048586, 1, 0, 1048587, 1, 0, 1114112, 1, 0, 1114113, 1, 0, 1114114, 1, 0, 1114115, 1, 0, 1114116, 1, 0, 1114117, 1, 0, 1114118, 1, 0, 1114119, 1, 0, 1114120, 1, 0, 1114121, 1, 0, 1114122, 1, 0, 1114123, 1, 0, 1179648, 1, 0, 1179649, 1, 0, 1179650, 1, 0, 1179651, 1, 0, 1179652, 1, 0, 1179653, 1, 0, 1179654, 1, 0, 1179655, 1, 0, 1179656, 1, 0, 1179657, 1, 0, 1179658, 1, 0, 1179659, 1, 0, 1245184, 1, 0, 1245185, 1, 0, 1245186, 1, 0, 1245187, 1, 0, 1245188, 1, 0, 1245189, 1, 0, 1245190, 1, 0, 1245191, 1, 0, 1245192, 1, 0, 1245193, 1, 0, 1245194, 1, 0, 1245195, 1, 0, 1310720, 1, 0, 1310721, 1, 0, 1310722, 1, 0, 1310723, 1, 0, 1310724, 1, 0, 1310725, 1, 0, 1310726, 1, 0, 1310727, 1, 0, 1310728, 1, 0, 1310729, 1, 0, 1310730, 1, 0, 1310731, 1, 0, 1376256, 1, 0, 1376257, 1, 0, 1376258, 1, 0, 1376259, 1, 0, 1376260, 1, 0, 1376261, 1, 0, 1376262, 1, 0, 1376263, 1, 0, 1376264, 1, 0, 1376265, 1, 0, 1376266, 1, 0, 1376267, 1, 0, 1441792, 1, 0, 1441793, 1, 0, 1441794, 1, 0, 1441795, 1, 0, 1441796, 1, 0, 1441797, 1, 0, 1441798, 1, 0, 1441799, 1, 0, 1441800, 1, 0, 1441801, 1, 0, 1441802, 1, 0, 1441803, 1, 0, 1507328, 1, 0, 1507329, 1, 0, 1507330, 1, 0, 1507331, 1, 0, 1507332, 1, 0, 1507333, 1, 0, 1507334, 1, 0, 1507335, 1, 0, 1507336, 1, 0, 1507337, 1, 0, 1507338, 1, 0, 1507339, 1, 0, 1572864, 1, 0, 1572865, 1, 0, 1572866, 1, 0, 1572867, 1, 0, 1572868, 1, 0, 1572869, 1, 0, 1572870, 1, 0, 1572871, 1, 0, 1572872, 1, 0, 1572873, 1, 0, 1572874, 1, 0, 1572875, 1, 0, 1638400, 1, 0, 1638401, 1, 0, 1638402, 1, 0, 1638403, 1, 0, 1638404, 1, 0, 1638405, 1, 0, 1638406, 1, 0, 1638407, 1, 0, 1638408, 1, 0, 1638409, 1, 0, 1638410, 1, 0, 1638411, 1, 0, 1703936, 1, 0, 1703937, 1, 0, 1703938, 1, 0, 1703939, 1, 0, 1703940, 1, 0, 1703941, 1, 0, 1703942, 1, 0, 1703943, 1, 0, 1703944, 1, 0, 1703945, 1, 0, 1703946, 1, 0, 1703947, 1, 0, 1769472, 1, 0, 1769473, 1, 0, 1769474, 1, 0, 1769475, 1, 0, 1769476, 1, 0, 1769477, 1, 0, 1769478, 1, 0, 1769479, 1, 0, 1769480, 1, 0, 1769481, 1, 0, 1769482, 1, 0, 1769483, 1, 0, 1835008, 1, 0, 1835009, 1, 0, 1835010, 1, 0, 1835011, 1, 0, 1835012, 1, 0, 1835013, 1, 0, 1835014, 1, 0, 1835015, 1, 0, 1835016, 1, 0, 1835017, 1, 0, 1835018, 1, 0, 1835019, 1, 0, 1900544, 1, 0, 1900545, 1, 0, 1900546, 1, 0, 1900547, 1, 0, 1900548, 1, 0, 1900549, 1, 0, 1900550, 1, 0, 1900551, 1, 0, 1900552, 1, 0, 1900553, 1, 0, 1900554, 1, 0, 1900555, 1, 0, 1966080, 1, 0, 1966081, 1, 0, 1966082, 1, 0, 1966083, 1, 0, 1966084, 1, 0, 1966085, 1, 0, 1966086, 1, 0, 1966087, 1, 0, 1966088, 1, 0, 1966089, 1, 0, 1966090, 1, 0, 1966091, 1, 0, 2031616, 1, 0, 2031617, 1, 0, 2031618, 1, 0, 2031619, 1, 0, 2031620, 1, 0, 2031621, 1, 0, 2031622, 1, 0, 2031623, 1, 0, 2031624, 1, 0, 2031625, 1, 0, 2031626, 1, 0, 2031627, 1, 0, 2097152, 1, 0, 2097153, 1, 0, 2097154, 1, 0, 2097155, 1, 0, 2097156, 1, 0, 2097157, 1, 0, 2097158, 1, 0, 2097159, 1, 0, 2097160, 1, 0, 2097161, 1, 0, 2097162, 1, 0, 2097163, 1, 0, 2162688, 1, 0, 2162689, 1, 0, 2162690, 1, 0, 2162691, 1, 0, 2162692, 1, 0, 2162693, 1, 0, 2162694, 1, 0, 2162695, 1, 0, 2162696, 1, 0, 2162697, 1, 0, 2162698, 1, 0, 2162699, 1, 0, 2228224, 1, 0, 2228225, 1, 0, 2228226, 1, 0, 2228227, 1, 0, 2228228, 1, 0, 2228229, 1, 0, 2228230, 1, 0, 2228231, 1, 0, 2228232, 1, 0, 2228233, 1, 0, 2228234, 1, 0, 2228235, 1, 0, 2293760, 0, 0, 2359296, 0, 0, 2424832, 0, 0, 2490368, 0, 0, 2555904, 0, 0, 2621440, 0, 0, 2686976, 0, 0, 2752512, 0, 0, 2818048, 0, 0, 2883584, 0, 0, 2949120, 0, 0, 3014656, 0, 0, 3080192, 0, 0, 3145728, 0, 0, 3211264, 0, 0, 3276800, 0, 0, 3342336, 0, 0, 3407872, 0, 0, 3473408, 0, 0, 3538944, 0, 0, 3604480, 0, 0, 3670016, 0, 0, 3735552, 0, 0, 3801088, 0, 0, 3866624, 0, 0, 3932160, 0, 0, 3997696, 0, 0, 4063232, 0, 0, 4128768, 0, 0, 4194304, 0, 0, 4259840, 0, 0, 4325376, 0, 0, 4390912, 0, 0, 4456448, 0, 0, 4521984, 0, 0, 4587520, 0, 0, 4653056, 0, 0, 4718592, 0, 0, 4784128, 0, 0, 4849664, 0, 0, 4915200, 0, 0, 4980736, 0, 0, 5046272, 0, 0, 5111808, 0, 0, 5177344, 0, 0, 5242880, 0, 0, 5308416, 0, 0, 5373952, 0, 0, 5439488, 0, 0, 5505024, 0, 0, 5570560, 0, 0, 5636096, 0, 0, 5701632, 0, 0, 5767168, 0, 0, 5832704, 0, 0, 5898240, 0, 0, 5963776, 0, 0, 6029312, 0, 0, 6094848, 0, 0, 6160384, 0, 0, 6225920, 0, 0, 6291456, 0, 0, 6356992, 0, 0, 6422528, 0, 0, 6488064, 0, 0, 6553600, 0, 0, 6619136, 0, 0, 6684672, 0, 0, 6750208, 0, 0, 6815744, 0, 0, 6881280, 0, 0, 6946816, 0, 0, 7012352, 0, 0, 7077888, 0, 0, 7143424, 0, 0, 7208960, 0, 0, 7274496, 0, 0, 7340032, 0, 0, 7405568, 0, 0, 7471104, 0, 0, 7536640, 0, 0, 7602176, 0, 0, 7667712, 0, 0, 7733248, 0, 0, 7798784, 0, 0, 7864320, 0, 0, 7929856, 0, 0, 7995392, 0, 0, 8060928, 0, 0, 8126464, 0, 0, 8192000, 0, 0, 8257536, 0, 0, 8323072, 0, 0, 8388608, 0, 0, 8454144, 0, 0, 8519680, 0, 0, 8585216, 0, 0, 8650752, 0, 0, 8716288, 0, 0, 8781824, 0, 0, 8847360, 0, 0, 8912896, 0, 0, 8978432, 0, 0, 9043968, 0, 0, 9109504, 0, 0, 9175040, 0, 0, 9240576, 0, 0, 9306112, 0, 0, 9371648, 0, 0, 9437184, 0, 0, 9502720, 0, 0, 9568256, 0, 0, 9633792, 0, 0, 9699328, 0, 0, 9764864, 0, 0, 9830400, 0, 0, 9895936, 0, 0, 9961472, 0, 0, 10027008, 0, 0, 10092544, 0, 0, 10158080, 0, 0, 10223616, 0, 0, 10289152, 0, 0, 10354688, 0, 0, 10420224, 0, 0, 10485760, 0, 0 )
script = ExtResource( 6 )
__meta__ = {
"_edit_lock_": true
}

[node name="forest_leaves" type="Sprite" parent="TileMap"]
position = Vector2( -32, 0 )
scale = Vector2( 0.5, 0.5 )
z_index = 1000
texture = ExtResource( 8 )
centered = false
__meta__ = {
"_edit_lock_": true
}

[node name="forest_leaves2" type="Sprite" parent="TileMap"]
position = Vector2( -32, 1024 )
scale = Vector2( 0.5, 0.5 )
z_index = 1000
texture = ExtResource( 8 )
centered = false
__meta__ = {
"_edit_lock_": true
}

[node name="forest_leaves3" type="Sprite" parent="TileMap"]
position = Vector2( 800, 1024 )
rotation = 3.14159
scale = Vector2( 0.5, 0.5 )
z_index = 1000
texture = ExtResource( 8 )
centered = false
__meta__ = {
"_edit_lock_": true
}

[node name="forest_leaves4" type="Sprite" parent="TileMap"]
position = Vector2( 800, 2048 )
rotation = 3.14159
scale = Vector2( 0.5, 0.5 )
z_index = 1000
texture = ExtResource( 8 )
centered = false

[node name="ground" type="Sprite" parent="TileMap"]
position = Vector2( 384, 512 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 10 )
__meta__ = {
"_edit_lock_": true
}

[node name="ground2" type="Sprite" parent="TileMap"]
position = Vector2( 384, 1536 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 10 )

[node name="LeafParticles" type="Particles2D" parent="."]
position = Vector2( 384, 1088 )
z_index = -450
lifetime = 5.0
preprocess = 5.0
visibility_rect = Rect2( -384, -1500, 768, 1520 )
process_material = SubResource( 5 )
texture = ExtResource( 11 )

[node name="LeafParticles2" type="Particles2D" parent="."]
position = Vector2( 384, 1088 )
z_index = -450
lifetime = 5.0
preprocess = 5.0
visibility_rect = Rect2( -384, -1500, 768, 1520 )
process_material = SubResource( 5 )
texture = ExtResource( 12 )

[node name="YSort" type="YSort" parent="."]

[node name="Player" parent="YSort" instance=ExtResource( 1 )]
position = Vector2( 384, 312.108 )

[node name="Spawner" type="Node" parent="."]
script = ExtResource( 18 )

[node name="Transition" parent="." instance=ExtResource( 23 )]

[node name="LagHelper" type="Node2D" parent="."]
pause_mode = 1
script = ExtResource( 24 )

[node name="BasicArrow" parent="LagHelper" instance=ExtResource( 44 )]

[node name="BasicArrowII" parent="LagHelper" instance=ExtResource( 42 )]

[node name="BasicArrowIII" parent="LagHelper" instance=ExtResource( 42 )]

[node name="BasicArrowIV" parent="LagHelper" instance=ExtResource( 43 )]

[node name="Scroll" parent="LagHelper" instance=ExtResource( 35 )]

[node name="Scroll2" parent="LagHelper" instance=ExtResource( 28 )]

[node name="Book" parent="LagHelper" instance=ExtResource( 31 )]

[node name="Cauldron" parent="LagHelper" instance=ExtResource( 27 )]

[node name="Crystal" parent="LagHelper" instance=ExtResource( 33 )]

[node name="Broom" parent="LagHelper" instance=ExtResource( 39 )]

[node name="ScrollExplode" parent="LagHelper" instance=ExtResource( 36 )]

[node name="CauldronExplode" parent="LagHelper" instance=ExtResource( 37 )]

[node name="BookExplode" parent="LagHelper" instance=ExtResource( 25 )]

[node name="CrystalExplode" parent="LagHelper" instance=ExtResource( 26 )]

[node name="BroomExplode" parent="LagHelper" instance=ExtResource( 38 )]

[node name="WritingBullet" parent="LagHelper" instance=ExtResource( 32 )]

[node name="CrystalBullet" parent="LagHelper" instance=ExtResource( 34 )]

[node name="BroomBullet" parent="LagHelper" instance=ExtResource( 40 )]

[node name="GreenSphereBullet3" parent="LagHelper" instance=ExtResource( 30 )]
